--- a/blog/template/blog/base.html
+++ b/blog/template/blog/base.html
@@ -1,5 +1,1 @@
-<!-- 引入 layui.css -->
-<link rel="stylesheet" href="//unpkg.com/layui@2.6.8/dist/css/layui.css">
- 
-<!-- 引入 layui.js -->
-<script src="//unpkg.com/layui@2.6.8/dist/layui.js">
+<!-- layui? material-ui? -->
