--- a/blog/template/blog/index.html
+++ b/blog/template/blog/index.html
@@ -1,5 +1,7 @@
-import { Button } from '@mantine/core';
+{% extends 'blog/base.html' %}
+{% load static %}
+{% block content %}
 
-export function MyApp() {
-  return <Button>Hello world!</Button>;
-}
+Hello world!
+
+{% endblock %}            
