--- a/blog/template/blog/base.html
+++ b/blog/template/blog/base.html
@@ -9,25 +9,25 @@
     
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" sizes="192x192" href='{% static "/android-desktop.png" %}'>
+    <link rel="icon" sizes="192x192" href='{% static "/mdl/images/android-desktop.png" %}'>
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Material Design Lite">
-    <link rel="apple-touch-icon-precomposed" href='{% static "/ios-desktop.png" %}'>
+    <link rel="apple-touch-icon-precomposed" href='{% static "/mdl/images/ios-desktop.png" %}'>
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
     <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
     <meta name="msapplication-TileColor" content="#3372DF">
 
-    <link rel="shortcut icon" href='{% static "/favicon.png" %}'>
+    <link rel="shortcut icon" href='{% static "mdl/images/favicon.png" %}'>
 
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-orange.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href='{% static "/mdl/styles.css" %}'>
     <style>
     #view-source {
       position: fixed;
@@ -39,7 +39,7 @@
       z-index: 900;
     }
     </style>
-    
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
 </head>
@@ -49,7 +49,7 @@
         <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
             <div class="mdl-layout__header-row portfolio-logo-row">
                 <span class="mdl-layout__title">
-                    <div class="portfolio-logo"></div>
+<!--                    <div class="portfolio-logo"></div>-->
                     <span class="mdl-layout__title"><strong>Katharine Who You Are</strong></span>
                 </span>
             </div>
