--- a/blog/template/blog/base.html
+++ b/blog/template/blog/base.html
@@ -49,7 +49,7 @@
         <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
             <div class="mdl-layout__header-row portfolio-logo-row">
                 <span class="mdl-layout__title">
-<!--                    <div class="portfolio-logo"></div>-->
+                    <div class="portfolio-logo"></div>
                     <span class="mdl-layout__title"><strong>Katharine Who You Are</strong></span>
                 </span>
             </div>
