aboutme / index(nav need to be updated)

--- a/blog/template/blog/index.html
+++ b/blog/template/blog/index.html
@@ -2,6 +2,10 @@
 {% load static %}
 {% block content %}
 
-Hello world!
+<main class="mdl-layout__content">
+    <div class="mdl-grid portfolio-max-width">
+Hello world
+    </div>
+</main>
 
 {% endblock %}            
