--- a/blog/static/mdl/styles.css
+++ b/blog/static/mdl/styles.css
@@ -29,7 +29,7 @@
 }
 
 .portfolio-logo {
-  background: url(images/logo.jpeg) 50% no-repeat;
+  background: url(images/aboume.GIF) 50% no-repeat;
   background-size: cover;
   height: 150px;
   width: 150px;
