--- a/blog/template/blog/base.html
+++ b/blog/template/blog/base.html
@@ -9,19 +9,19 @@
     
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" sizes="192x192" href='{% static "/mdl/images/android-desktop.png" %}'>
+    <link rel="icon" sizes="192x192" href='{% static "/mdl/images/logo.jpeg" %}'>
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Material Design Lite">
-    <link rel="apple-touch-icon-precomposed" href='{% static "/mdl/images/ios-desktop.png" %}'>
+    <link rel="apple-touch-icon-precomposed" href='{% static "/mdl/images/logo.jpeg" %}'>
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
     <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
     <meta name="msapplication-TileColor" content="#3372DF">
 
-    <link rel="shortcut icon" href='{% static "mdl/images/favicon.png" %}'>
+    <link rel="shortcut icon" href='{% static "mdl/images/logo.jpeg" %}'>
 
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
@@ -57,6 +57,7 @@
             <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                     <a class="mdl-navigation__link  {% if request.path == '/index' or request.path == '/' %}is-active{% endif %}" href={% url 'index' %}>Home</a >
+                    <a class="mdl-navigation__link  {% if request.path == '/category' %}is-active{% endif %}" href={% url 'category' %}>Article</a >                    
                     <a class="mdl-navigation__link  {% if request.path == '/aboutme' %}is-active{% endif %}" href={% url 'aboutme' %}>About Me</a >
                     <a class="mdl-navigation__link {% if request.path == '/admin' %}is-active{% endif %}" href="admin" target="_blank">Admin</a >
 
@@ -66,8 +67,13 @@
         </header>
 
         <div class="mdl-layout__drawer mdl-layout--small-screen-only">
+                <span class="mdl-layout__title">
+                    <div class="portfolio-logo"></div>
+                    <span class="mdl-layout__title"><strong>Katharine Who You Are</strong></span>
+                </span>
             <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                 <a class="mdl-navigation__link {% if request.path == '/index' or request.path == '/' %}is-active{% endif %}" href={% url 'index' %}>Home</a>
+                <a class="mdl-navigation__link  {% if request.path == '/category' %}is-active{% endif %}" href={% url 'category' %}>Article</a >
                 <a class="mdl-navigation__link  {% if request.path == '/aboutme' %}is-active{% endif %}" href={% url 'aboutme' %}>About Me</a >
                 <a class="mdl-navigation__link {% if request.path == '/admin' %}is-active{% endif %}" href="admin" target="_blank">Admin</a>
             </nav>
@@ -81,7 +87,23 @@
         <div class="mdl-mini-footer__left-section">
             <div class="mdl-logo">Hacked by Katharine</div>
         </div>
-
+        <div class="mdl-mini-footer--left-section">
+            <button class="mdl-mini-footer--social-btn social-btn social-btn__twitter">
+              <span class="visuallyhidden">Twitter</span>
+            </button>
+            <button class="mdl-mini-footer--social-btn social-btn social-btn__blogger">
+              <span class="visuallyhidden">Facebook</span>
+            </button>
+            <button class="mdl-mini-footer--social-btn social-btn social-btn__gplus">
+              <span class="visuallyhidden">Google Plus</span>
+            </button>
+        </div>
+        <div class="mdl-mini-footer--right-section">
+            <button class="mdl-mini-footer--social-btn social-btn__share">
+              <i class="material-icons" role="presentation">share</i>
+              <span class="visuallyhidden">share</span>
+            </button>
+        </div>
     </footer>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     </div>
