--- a/blog/template/blog/article.html
+++ b/blog/template/blog/article.html
@@ -2,89 +2,115 @@
 {% load static %}
 {% block content %}
 <main class="mdl-layout__content">
+    <div class="mdl-grid portfolio-max-width portfolio-contact">
+        <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
+            <div class="mdl-card__title">
+                <h2 class="mdl-cell mdl-cell--12-col mdl-typography--headline">{{ post.title }}</h2>
+                <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
+                <p>{{ post.author}} posted at {{ post.created_time }}</p>
+                <p>Category: <a class="category" href="/category/{{ post.category.id }}" %}>{{ post.category }}</a> </p>
+                </div>
+            </div>
+            <center>
+                <div class="mdl-card__media mdl-cell--6-col">
+                    <img class="article-image" src='/{{ post.cover }}' border="0" alt="">
+                </div>
+            </center>
+            <div class="mdl-card__supporting-text">
+               {{ post.content }}
+            </div>
+<!--             <div class="mdl-grid portfolio-copy">
+                <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Comment</h3>
+                {% if comments %}
+                <div class="mdl-cell mdl-cell--12-col mdl-card__supporting-text no-padding ">
+                    <ul class="demo-list-icon mdl-list">
+                        {% recursetree comments %}
+                            <li class="mdl-list__item mdl-list__item--three-line" c_id="{{ node.id }}">
+                                <span class="mdl-list__item-primary-content">
+                                    <i class="material-icons mdl-list__item-avatar">person</i>                            
+                                    <span>{{ node.content }}</span>
+                                    <span class="mdl-list__item-text-body">
+                                        Posted by <U><strong>{{ node.author }}</strong></U> at {{ node.created_time }}
+                                    </span>
+                                </span>
+                
+                                {% if node.parent == NULL %}
+                                    <span class="mdl-list__item-secondary-content">
+                                        <button type="button" class="mdl-button mdl-js-button mdl-button--primary reply_c"> 
+                                            Reply
+                                        </button>
+                                    </span>
+                                {% endif %}
+                                
+                                {% if not node.is_leaf_node %}
+                                    <li><ul>{{ children }}</ul></li>
+                                {% endif %}
+                            </li>
+                        {% endrecursetree %}
+                    </ul>
+                </div>
+                {% else %}
+                <div class="mdl-cell mdl-cell--12-col mdl-card__supporting-text no-padding ">
+                    <p>No Comment!</p>
+                </div>
+                {% endif %}
 
-    <div class="demo-blog demo-blog--blogpost mdl-layout mdl-js-layout has-drawer is-upgraded">
-        <div class="demo-blog__posts mdl-grid">
-          <div class="mdl-card mdl-shadow--4dp mdl-cell mdl-cell--12-col">
-            <div class="mdl-card__media mdl-color-text--grey-50">
-              <h3>On the road again</h3>
-            </div>
-            <div class="mdl-color-text--grey-700 mdl-card__supporting-text meta">
-            </div>
-            <div class="mdl-color-text--grey-700 mdl-card__supporting-text">
-              <p>
-                Excepteur reprehenderit sint exercitation ipsum consequat qui sit id velit elit. Velit anim eiusmod labore sit amet. Voluptate voluptate irure occaecat deserunt incididunt esse in. Sunt velit aliquip sunt elit ex nulla reprehenderit qui ut eiusmod ipsum do. Duis veniam reprehenderit laborum occaecat id proident nulla veniam. Duis enim deserunt voluptate aute veniam sint pariatur exercitation. Irure mollit est sit labore est deserunt pariatur duis aute laboris cupidatat. Consectetur consequat esse est sit veniam adipisicing ipsum enim irure.
-              </p>
-              <p>
-                Qui ullamco consectetur aute fugiat officia ullamco proident Lorem ad irure. Sint eu ut consectetur ut esse veniam laboris adipisicing aliquip minim anim labore commodo. Incididunt eu enim enim ipsum Lorem commodo tempor duis eu ullamco tempor elit occaecat sit. Culpa eu sit voluptate ullamco ad irure. Anim commodo aliquip cillum ea nostrud commodo id culpa eu irure ut proident. Incididunt cillum excepteur incididunt mollit exercitation fugiat in. Magna irure laborum amet non ullamco aliqua eu. Aliquip adipisicing dolore irure culpa aute enim. Ullamco quis eiusmod ipsum laboris quis qui.
-              </p>
-              <p>
-                Cillum ullamco eu cupidatat excepteur Lorem minim sint quis officia irure irure sint fugiat nostrud. Pariatur Lorem irure excepteur Lorem non irure ea fugiat adipisicing esse nisi ullamco proident sint. Consectetur qui quis cillum occaecat ullamco veniam et Lorem cupidatat pariatur. Labore officia ex aliqua et occaecat velit dolor deserunt minim velit mollit irure. Cillum cupidatat enim officia non velit officia labore. Ut esse nisi voluptate et deserunt enim laborum qui magna sint sunt cillum. Id exercitation labore sint ea labore adipisicing deserunt enim commodo consectetur reprehenderit enim. Est anim nostrud quis non fugiat duis cillum. Aliquip enim officia ad commodo id.
-              </p>
-            </div>
-<!--            <div class="mdl-color-text--primary-contrast mdl-card__supporting-text comments">
-              <form>
-                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                  <textarea rows=1 class="mdl-textfield__input" id="comment"></textarea>
-                  <label for="comment" class="mdl-textfield__label">Join the discussion</label>
+                <div class="mdl-card__supporting-text">
+                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" id="add" type="button">
+                        Add Comment
+                    </button>
                 </div>
-                <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
-                  <i class="material-icons" role="presentation">check</i><span class="visuallyhidden">add comment</span>
-                </button>
-              </form>
-              <div class="comment mdl-color-text--grey-700">
-                <header class="comment__header">
-                  <img src="images/co1.jpg" class="comment__avatar">
-                  <div class="comment__author">
-                    <strong>James Splayd</strong>
-                    <span>2 days ago</span>
-                  </div>
-                </header>
-                <div class="comment__text">
-                  In in culpa nulla elit esse. Ex cillum enim aliquip sit sit ullamco ex eiusmod fugiat. Cupidatat ad minim officia mollit laborum magna dolor tempor cupidatat mollit. Est velit sit ad aliqua ullamco laborum excepteur dolore proident incididunt in labore elit.
+
+                <div class="mdl-card__supporting-text" id='add_comment' style="display:none">
+                    <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Add Comment</h3>
+                    <form action="." method="post">
+                        {% csrf_token %}
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                            <input class="mdl-textfield__input" type="text" id="id_{{ form.author.name }}" name="{{ form.author.name }}" value="{% if form.author.value != None %}{{ form.author.value }}{% endif %}">
+                            <label class="mdl-textfield__label" for="id_{{ form.author.name }}">Name</label>
+                        </div>
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                            <input class="mdl-textfield__input" type="text" id="id_{{ form.email.name }}" name="{{ form.email.name }}" value="{% if form.email.value != None %}{{ form.email.value }}{% endif %}" >
+                            <label class="mdl-textfield__label" for="id_{{ form.email.name }}">Email</label>
+                        </div>
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                            <input class="mdl-textfield__input" type="text" rows="5" id="id_{{ form.content.name }}" name="{{ form.content.name }}" value="{% if form.content.value != None %}{{ form.content.value }}{% endif %}">
+                            <label class="mdl-textfield__label" for="id_{{ form.content.name }}">Comment</label>
+                        </div>
+                        <center>
+                            <input type="submit" value="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" name='comment' onclick="return checkForm(this);"/>   
+                            <input type="button" value="cancel" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" name='cancelAddcom' onclick="return cancelAddcomment();"/>
+                        </center>
+                    </form>
                 </div>
-                <nav class="comment__actions">
-                  <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
-                    <i class="material-icons" role="presentation">thumb_up</i><span class="visuallyhidden">like comment</span>
-                  </button>
-                  <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
-                    <i class="material-icons" role="presentation">thumb_down</i><span class="visuallyhidden">dislike comment</span>
-                  </button>
-                  <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
-                    <i class="material-icons" role="presentation">share</i><span class="visuallyhidden">share comment</span>
-                  </button>
-                </nav>
-                <div class="comment__answers">
-                  <div class="comment">
-                    <header class="comment__header">
-                      <img src="images/co2.jpg" class="comment__avatar">
-                      <div class="comment__author">
-                        <strong>John Dufry</strong>
-                        <span>2 days ago</span>
-                      </div>
-                    </header>
-                    <div class="comment__text">
-                      Yep, agree!
-                    </div>
-                    <nav class="comment__actions">
-                      <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
-                        <i class="material-icons" role="presentation">thumb_up</i><span class="visuallyhidden">like comment</span>
-                      </button>
-                      <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
-                        <i class="material-icons" role="presentation">thumb_down</i><span class="visuallyhidden">dislike comment</span>
-                      </button>
-                      <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
-                        <i class="material-icons" role="presentation">share</i><span class="visuallyhidden">share comment</span>
-                      </button>
-                    </nav>
-                  </div>
-                </div>
-              </div>-->
+
+               <div class="mdl-card__supporting-text reply_comment" style="display:none" id="reply_comment">
+                    <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Reply</h3>
+                    {{ node.id }}
+                    <form action="." method="post">
+                        {% csrf_token %}
+                        <input type="text" id="comment_id" name="{{ replyform.parent.name }}" value="" hidden>
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                            <input class="mdl-textfield__input" type="text" id="id_{{ replyform.author.name }}" name="{{ replyform.author.name }}" value="{% if replyform.author.value != None %}{{ replyform.author.value }}{% endif %}">
+                            <label class="mdl-textfield__label" for="id_{{ replyform.author.name }}">Name</label>
+                        </div>
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                             <input class="mdl-textfield__input" type="text" id="id_{{ replyform.email.name }}" name="{{ replyform.email.name }}" value="{% if replyform.email.value != None %}{{ replyform.email.value }}{% endif %}" >
+                            <label class="mdl-textfield__label" for="id_{{ replyform.email.name }}">Email</label>
+                        </div>
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                            <input class="mdl-textfield__input" type="text" rows="5" id="id_{{ replyform.content.name }}" name="{{ replyform.content.name }}" value="{% if replyform.content.value != None %}{{ replyform.content.value }}{% endif %}">
+                            <label class="mdl-textfield__label" for="id_{{ replyform.content.name }}">Comment</label>
+                        </div>
+                        <center>
+                            <input type="submit" value="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" name='reply' onclick="return checkForm(this);"/>   
+                            <input type="button" value="cancel" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" name='cancelRpl'  onclick="return cancelReply();"/>
+                        </center>
+                    </form>
+                </div>-->
             </div>
-          </div>
         </div>
+    </div>
 </main>
-
-
 
 {% endblock %}            
