--- a/blog/static/mdl/styles.css
+++ b/blog/static/mdl/styles.css
@@ -162,15 +162,23 @@ img.article-image {
   max-width: 550px;
   margin: auto;
 }
-
+/*
 footer {
   background-image: url(images/footer-background.png);
   background-size: cover;
+  bottom:0;
+  margin-top: 80px;
+  height: 120px;
+  padding: 40px;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: white;
+  box-sizing: border-box;
 }
-
-
-
+*/
 body::before {
+
     background-size: cover;
     background-attachment: fixed;
     content: '';
@@ -186,25 +194,25 @@ body::before {
        (max-width: 512px)  and (min-resolution: 1.5dppx),
        (max-width: 1024px) and (-webkit-max-device-pixel-ratio: 1.5),
        (max-width: 1024px) and (max-resolution: 1.5dppx) {
-  body::before {
+/*  body::before {
     background-image: url('images/bg_1024.jpg');
-  }
+  }*/
 }
 @media (min-width: 513px)  and (max-width: 1024px) and (-webkit-min-device-pixel-ratio: 1.5),
        (min-width: 513px)  and (max-width: 1024px) and (min-resolution: 1.5dppx),
        (min-width: 1025px) and (max-width: 2048px) and (-webkit-max-device-pixel-ratio: 1.5),
        (min-width: 1025px) and (max-width: 2048px) and (max-resolution: 1.5dppx)  {
-  body::before {
+/*  body::before {
     background-image: url('images/bg_2048.jpg');
-  }
+  }*/
 }
 @media (min-width: 1025px) and (-webkit-min-device-pixel-ratio: 1.5),
        (min-width: 1025px) and (min-resolution: 1.5dppx),
        (min-width: 2049px) and (-webkit-max-device-pixel-ratio: 1.5),
        (min-width: 2049px) and (max-resolution: 1.5dppx) {
-  body::before {
+/*  body::before {
     background-image: url('images/bg_2880.jpg');
-  }
+  }*/
 }
 body .demo-blog {
   font-family: 'Roboto', 'Helvetica', sans-serif;
@@ -659,14 +667,23 @@ body .demo-blog {
   color: rgba(0, 0, 0, 0.54);
   background: transparent;
 }
-
+/*
 .demo-blog .mdl-mini-footer {
+  background-size: cover;
+  position: absolute;
+  bottom: 0;
   margin-top: 80px;
-  height: 120px;
-  padding: 40px;
+  height: 80px;
+  padding: 20px;
+  width: 100%;
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: white;
+  background-color: grey;
   box-sizing: border-box;
+}*/
+
+footer {
+  background-color: grey;
+  background-size: cover;
 }
