--- a/blog/template/blog/base.html
+++ b/blog/template/blog/base.html
@@ -26,7 +26,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-orange.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-pink.min.css">
     <link rel="stylesheet" href='{% static "/mdl/styles.css" %}'>
     <style>
     #view-source {
@@ -60,7 +60,6 @@
                     <a class="mdl-navigation__link  {% if request.path == '/category' %}is-active{% endif %}" href={% url 'archive' %}>Article</a >                    
                     <a class="mdl-navigation__link  {% if request.path == '/aboutme' %}is-active{% endif %}" href={% url 'aboutme' %}>About Me</a >
                     <a class="mdl-navigation__link {% if request.path == '/admin' %}is-active{% endif %}" href="admin" target="_blank">Admin</a >
-
                 </nav>
             </div>
 
@@ -82,12 +81,11 @@
             {% block content %}
 
             {% endblock %}
-
     <footer class="mdl-mini-footer">
         <div class="mdl-mini-footer__left-section">
             <div class="mdl-logo">Hacked by Katharine</div>
         </div>
-        <div class="mdl-mini-footer--left-section">
+        <div class="mdl-mini-footer--right-section">
             <button class="mdl-mini-footer--social-btn social-btn social-btn__twitter">
               <span class="visuallyhidden">Twitter</span>
             </button>
@@ -98,12 +96,12 @@
               <span class="visuallyhidden">Google Plus</span>
             </button>
         </div>
-        <div class="mdl-mini-footer--right-section">
+<!--        <div class="mdl-mini-footer--right-section">
             <button class="mdl-mini-footer--social-btn social-btn__share">
               <i class="material-icons" role="presentation">share</i>
               <span class="visuallyhidden">share</span>
             </button>
-        </div>
+        </div>-->
     </footer>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     </div>
