--- a/blog/template/blog/index.html
+++ b/blog/template/blog/index.html
@@ -1,11 +1,36 @@
 {% extends 'blog/base.html' %}
 {% load static %}
 {% block content %}
+    <div class="demo-blog mdl-layout mdl-js-layout has-drawer is-upgraded">
 
 <main class="mdl-layout__content">
-    <div class="mdl-grid portfolio-max-width">
-Hello world
+    <div class="demo-blog__posts mdl-grid">
+    <div class="mdl-card on-the-road-again mdl-cell mdl-cell--12-col">
+        <div class="mdl-grid portfolio-max-width">
+            <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
+                {% if article %}
+                    {% for title in article %}
+                <div class="mdl-card on-the-road-again mdl-cell mdl-cell--12-col">
+                    <div class="mdl-card__media mdl-color-text--grey-50">
+                    <center><h4><a href="{% url 'detail' id=title.id %}">{{ title.title }}</a></h4></center>
+                    </div>
+                    <div class="mdl-color-text--grey-600 mdl-card__supporting-text">
+                        {{ title.abstract }}
+                    </div>
+                    <div class="mdl-card__supporting-text meta mdl-color-text--grey-600">
+                        <div>
+                            <strong>{{ title.category.category }}</strong><br>
+                            <span>{{ title.update_time }}</span>
+                        </div>
+                    </div>
+                </div>
+
+                    {% endfor %}
+                {% endif %}
+            </div>
+        </div>
+    </div>
     </div>
 </main>
-
-{% endblock %}            
+</div>
+{% endblock %}
