--- a/blog/static/mdl/styles.css
+++ b/blog/static/mdl/styles.css
@@ -232,7 +232,6 @@ body .demo-blog {
 }
 
 .demo-blog.mdl-layout .mdl-layout__content {
-  padding-top: 230px;
   position: relative;
   -webkit-overflow-scrolling: touch;
 }
@@ -272,9 +271,11 @@ body .demo-blog {
           align-items: flex-end;
   cursor: pointer;
 }
-.demo-blog .mdl-card__media a,
+.demo-blog .mdl-card__media a,{
+  color: rgb(255,64,129)
+}
 .demo-blog .mdl-card__title a {
-  color: inherit;
+  color: rgb(255,64,129)
 }
 .demo-blog .mdl-card__supporting-text {
   width: 100%;
@@ -401,7 +402,6 @@ body .demo-blog {
   border-bottom-right-radius: 2px;
 }
 .demo-blog .on-the-road-again .mdl-card__media {
-  background-image: url('images/road.jpg');
 }
 .demo-blog .shopping .mdl-card__media {
   background-image: url('images/shopping.jpg');
@@ -463,7 +463,6 @@ body .demo-blog {
   background-color: transparent;
 }
 .demo-blog--blogpost .demo-blog__posts > .mdl-card .mdl-card__media {
-  background-image: url('images/road_big.jpg');
   height: 280px;
 }
 .demo-blog--blogpost .comments {
@@ -686,4 +685,8 @@ body .demo-blog {
 footer {
   background-color: grey;
   background-size: cover;
+}
+
+.mdl-card__media {
+  background-color: white;
 }
