--- a/blog/template/blog/archive.html
+++ b/blog/template/blog/archive.html
@@ -8,10 +8,10 @@
             {% if category %}
             {% for name in category %}
             <div class="mdl-card__title">
-                <h2 class="mdl-card__title-text">{{ name.category }}</h2>
+                <h2 class="mdl-card__title-text">{{ name }}</h2>
             </div>
                 {% for title in article %}
-                    {% if title.category.category == name.category.category %}
+                    {% if title.category.category == name %}
                 <div class="mdl-color-text--grey-700 mdl-card__supporting-text">
                     <a href="{% url 'detail' id=title.id %}">
                         {{ title.title }} <div style="float:right;">{{ title.update_time }}</div>
