--- a/blog/template/blog/article.html
+++ b/blog/template/blog/article.html
@@ -10,7 +10,7 @@
                 <h1 class="mdl-cell mdl-cell--12-col mdl-typography--headline">{{ post.title }}</h1></div>
             <div class="mdl-color-text--grey-700 mdl-card__supporting-text meta">
                 <div>
-                    <span>{{ post.update_time }}</span>
+                    Update at <span>{{ post.update_time }}</span> &&
                     Archived in <strong><a href="{% url 'category' id=post.category.id %}">{{ post.category.category }}</a></strong>
                 </div>
             </div>
